Fix image overflow with display: block; add custom ::selection style for text highlight

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -32,6 +32,10 @@ main {
     font-size: 20px;
     border-radius: 10px;
 }
+.about-text::selection{
+    background-color: black;
+    color:#d94a38;
+}
 .background-orange {
     background-color: #d94a38;
     padding-top: 10px;
@@ -39,6 +43,11 @@ main {
 .white-param {
     color: white;
     padding-bottom:30px;
+}
+.container img {
+    max-width: 100%;
+    height: auto;
+    display:block;
 }
 /* === Footer === */
 .main-footer {
@@ -53,7 +62,7 @@ main {
     border: solid #f5c16c 1px;
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1.5fr 2fr;
     gap: 20px;
     align-items: center;
 }
